Disable user zooming on mobile viewport and set mobile input font-size to 16px to prevent automatic zooming on iOS/Android

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -363,6 +363,7 @@ tr:hover {
   
   .form-input {
     width: 100% !important;
+    font-size: 16px !important;
   }
   
   button {
